<resources>
    <string name="app_name">Crypto Portfolio</string>
    <string name="hint_number">Number</string>
    <string name="hint_symbol">Symbol</string>
    <string name="positive_button">Add</string>
    <string name="negative_button">Cancel</string>
    <string name="add_dialog_title">Add new coin</string>
    <string name="my_portfolio_toolbar_text">My portfolio</string>
    <string name="sum_coin_list">Sum:</string>
    <string name="coin_info_tool_bar">Coin info</string>
    <string name="prise">Prise:</string>
    <string name="change_24_hour_prc">Change 24h%:</string>
    <string name="change_24_hour">Change 24h:</string>
    <string name="my_coins">My coins:</string>
    <string name="my_coins_sum">Sum:</string>
    <string name="market_cap">Cap:</string>
    <string name="volume">Volume:</string>
    <string name="supply">Supply:</string>
    <string name="change_24h">Change 24h:</string>
    <string name="edit_btn">Edit</string>
    <string name="delete_btn">Delete</string>
    <string name="delete_dialog_positive">Delete</string>
    <string name="delete_dialog_negative">Cancel</string>
    <string name="delete_dialog_title">Do you want delete coin from portfolio?</string>
    <string name="portfolio_is_empty">Portfolio is empty</string>
    <string name="input_new_number_of_the_coin">Input new number of the coin</string>
    <string name="edit_dialog_title">Edit number</string>
    <string name="edit_dialog_positive">Edit</string>
    <string name="edit_dialog_negative">Cancel</string>
    <string name="settings_tool_bar_text">Settings</string>
    <string name="select_symbol_to_convert">Select symbol to convert</string>
    <string name="select_sort_type">Select sort type</string>
    <string name="by_add_time">By add time</string>
    <string name="by_alphabet">By alphabet</string>
    <string name="by_sum">By sum</string>
    <string name="usd">USD</string>
    <string name="eur">EUR</string>
    <string name="rub">RUB</string>
    <string name="gbp">GBP</string>
    <string name="jpy">JPY</string>
    <string name="byn">BYN</string>
    <string name="btc">BTC</string>
    <string name="eth">ETH</string>
    <string name="krw">KRW</string>
</resources>
