<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/homeBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/tool_bar_background"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:src="@drawable/ic_arrow_back40dp"
                    android:tint="@color/tool_bar_element_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/toolBarTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_tool_bar_text"
                    android:textColor="@color/tool_bar_element_color"
                    android:textSize="@dimen/toolBarTextViewSize"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </Toolbar>

        <TextView
            android:id="@+id/selectSortType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginTop="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:text="@string/select_sort_type"
            android:textSize="@dimen/settingsTextSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolBar" />

        <RadioGroup
            android:id="@+id/selectedSortType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultMargin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selectSortType">

            <RadioButton
                android:id="@+id/sortByAddTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/settingsSymbolPadding"
                android:text="@string/by_add_time"
                android:textSize="@dimen/settingsTextSize" />

            <RadioButton
                android:id="@+id/sortByAlphabet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/settingsSymbolPadding"
                android:text="@string/by_alphabet"
                android:textSize="@dimen/settingsTextSize" />

            <RadioButton
                android:id="@+id/sortBySum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/settingsSymbolPadding"
                android:text="@string/by_sum"
                android:textSize="@dimen/settingsTextSize" />
        </RadioGroup>

        <TextView
            android:id="@+id/selectToFiat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defaultMargin"

            android:layout_marginEnd="@dimen/defaultMargin"
            android:text="@string/select_symbol_to_convert"
            android:textSize="@dimen/settingsTextSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selectedSortType" />

        <RadioGroup
            android:id="@+id/selectedSymbol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:layout_marginBottom="@dimen/defaultMargin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selectToFiat">

            <RadioButton
                android:id="@+id/usd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/settingsSymbolPadding"
                android:text="@string/usd"
                android:textSize="@dimen/settingsTextSize" />

            <RadioButton
                android:id="@+id/eur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/settingsSymbolPadding"
                android:text="@string/eur"
                android:textSize="@dimen/settingsTextSize" />

            <RadioButton
                android:id="@+id/rub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/settingsSymbolPadding"
                android:text="@string/rub"
                android:textSize="@dimen/settingsTextSize" />

            <RadioButton
                android:id="@+id/gbp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/settingsSymbolPadding"
                android:text="@string/gbp"
                android:textSize="@dimen/settingsTextSize" />

            <RadioButton
                android:id="@+id/jpy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/settingsSymbolPadding"
                android:text="@string/jpy"
                android:textSize="@dimen/settingsTextSize" />

            <RadioButton
                android:id="@+id/krw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/settingsSymbolPadding"
                android:text="@string/krw"
                android:textSize="@dimen/settingsTextSize" />

            <RadioButton
                android:id="@+id/byn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/settingsSymbolPadding"
                android:text="@string/byn"
                android:textSize="@dimen/settingsTextSize" />

            <RadioButton
                android:id="@+id/btc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/settingsSymbolPadding"
                android:text="@string/btc"
                android:textSize="@dimen/settingsTextSize" />

            <RadioButton
                android:id="@+id/eth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/settingsSymbolPadding"
                android:text="@string/eth"
                android:textSize="@dimen/settingsTextSize" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>