<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CustomDialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/defaultMargin">

        <TextView
            android:id="@+id/titleTextView"
            style="@style/CustomDialog.HeadText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_dialog_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/coinNumberEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_new_number_of_the_coin"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTextView" />

        <Button
            android:id="@+id/negativeBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/defaultMargin"
            android:text="@string/edit_dialog_negative"
            app:layout_constraintEnd_toStartOf="@id/positiveBtn"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coinNumberEditText" />

        <Button
            android:id="@+id/positiveBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/defaultMargin"
            android:layout_marginTop="@dimen/defaultMargin"
            android:backgroundTint="@color/edit_btn_color"
            android:text="@string/edit_dialog_positive"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@id/negativeBtn"
            app:layout_constraintTop_toBottomOf="@id/coinNumberEditText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
